[package]
name = "ledger"
version = "5.7.0"
authors = ["Cedric Pimenta <cedricpim@users.noreply.github.com>"]
description = "A command line ledger."
homepage = "https://github.com/cedricpim/ledger-rust"
repository = "https://github.com/cedricpim/ledger-rust"
readme = "README.md"
keywords = ["ledger", "command"]
license = "GNU General Public License v3.0"
edition = "2018"
autotests = false
include = ["data/currencies.json"]

[[bin]]
name = "ledger"
test = false
bench = false
doctest = false

# [[test]]
# name = "tests"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
clap = { version = "3.0.0-beta.1" }
serde = { version = "1", features = ["derive"] }
csv = "1.1"
xdg = "^2.1"
serde_yaml = "0.8"
serde_json = "1.0"
shellexpand = "2.0"
sodiumoxide = "0.2"
custom_error = "1.7"
tempfile = "3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
enum_dispatch = "0.3"
steel-cent = "0.2"
prettytable-rs = "^0.8"
lazy_static = "1.3"
lockfile = "0.2"
# Asset Price
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.7", features = ["full"] }
kuchiki = "0.8"
# Firefly
firefly-iii = { git = "https://github.com/cedricpim/firefly-iii-rs" }
# ProgressBar
indicatif = "0.16"
# Logging
log = "0.4"
env_logger = "0.8"
