[package]
name = "ledger"
version = "7.0.4"
authors = ["Cedric Pimenta <cedricpim@users.noreply.github.com>"]
description = "A command line ledger."
homepage = "https://github.com/cedricpim/ledger-rust"
repository = "https://github.com/cedricpim/ledger-rust"
readme = "README.md"
keywords = ["ledger", "command"]
license = "GNU General Public License v3.0"
edition = "2018"
autotests = false

[[bin]]
name = "ledger"
test = false
bench = false
doctest = false

# [[test]]
# name = "tests"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
csv = "1.1"
xdg = "2.1"
serde_yaml = "0.9"
serde_json = "1.0"
shellexpand = "3.1"
sodiumoxide = "0.2"
anyhow = "1.0"
tempfile = "3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
enum_dispatch = "0.3"
iso_currency = { git = "https://github.com/zbrox/iso_currency.git" }
prettytable-rs = "0.10"
lockfile = { version = "0.4", features = ["log"] }
# Asset Price
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.15", features = ["full"] }
# Firefly
firefly-iii = { git = "https://github.com/cedricpim/firefly-iii-rs" }
## For local debugging
# firefly-iii = { path = "../firefly-iii-rs" }
# ProgressBar
indicatif = "0.17"
# Logging
log = "0.4"
env_logger = "0.10"
